==> jozkosk1/RFID_hand_tag_reader/Core/Src/diskio.c <==
#define SPI_CH	1	/* SPI channel to use = 1: SPI1, 11: SPI1/remap, 2: SPI2 */
#define FCLK_SLOW() { SPI1->CR1 = (SPI1->CR1 & ~SPI_CR1_BR) | SPI_BAUDRATEPRESCALER_128; }	/* Set SCLK = PCLK / 256 */
#define FCLK_FAST() { SPI1->CR1 = (SPI1->CR1 & ~SPI_CR1_BR) | SPI_BAUDRATEPRESCALER_32; }	/* Set SCLK = PCLK / 4  = 21Mbits/s*/
#define	MMC_CD		1	/* Card detect (yes:true, no:false, default:true) */
#define	MMC_WP		0 /* Write protected (yes:true, no:false, default:false) */
#define SPIx_SR		SPI1_SR
#define SPIx_DR		SPI1_DR
#define	SPIxENABLE() {\
	__enable_peripheral(SPI1EN);\
	__enable_peripheral(IOPAEN);\
	__enable_peripheral(IOPCEN);\
	__gpio_conf_bit(GPIOA, 4, OUT_PP);						/* PA4: MMC_CS */\
	//__gpio_conf_bit(GPIOA, 5, ALT_PP);						/* PA5: MMC_SCLK */\
	//GPIOA_BSRR = _BV(6); __gpio_conf_bit(GPIOA, 6, IN_PUL); /* PA6: MMC_DO with pull-up */\
	__gpio_conf_bit(GPIOA, 7, ALT_PP);						/* PA7: MMC_DI */\
	GPIOC_BSRR = _BV(4); __gpio_conf_bit(GPIOC, 4, IN_PUL);	/* PC4: MMC_CD with pull-up */\
	SPIx_CR1 = _BV(9)|_BV(8)|_BV(6)|_BV(2);					/* Enable SPI1 */\
}*/
#include "stm32f0xx_hal.h"
#include "diskio.h"
#include "main.h"
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */

static
BYTE xchg_spi (
	BYTE dat	/* Data to send */
)
{
	//SPIx_DR = dat;
	//while (SPIx_SR & _BV(7)) ;
	//return (BYTE)SPIx_DR;
	//HAL_GPIO_TogglePin(LED_RED_GPIO_Port, LED_RED_Pin);
	HAL_SPI_TransmitReceive(&hspi2, &dat, &dat, 1, 10);
	//HAL_GPIO_TogglePin(LED_RED_GPIO_Port, LED_RED_Pin);
	return dat;
}

static
void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send (even number) */
)
{
	uint8_t i, Rx[10];
	i=0;
	while(btx>10){
		HAL_SPI_TransmitReceive(&hspi2, (buff+(i*10)), Rx, 10, 10);
		btx -= 10;
		i++;
	}
	HAL_SPI_TransmitReceive(&hspi2, (buff+(i*10)), Rx, btx, 10);
	//memory increment enable peripheral increment disable
	/*uint8_t i[512];
	//hspi2.hdmatx->Instance->CCR &= DMA_CCR_MINC;
	HAL_SPI_TransmitReceive_DMA(&hspi2, buff, i, btx);
	while(FlagDMA_EOC==0);//Parse_ADC();
		FlagDMA_EOC = 0;*/
	//HAL_SPI_TransmitReceive(&hspi2, buff, i, btx, 10);
	//SPI_DMA_Tx(&hspi2, buff, btx);
	//HAL_Delay(1);
	//while(hspi2.hdmatx->Instance->CNDTR !=0x200);

	/*WORD d;


	SPIx_CR1 &= ~_BV(6);
	SPIx_CR1 |= (_BV(6) | _BV(11));		// Set SPI to 16-bit mode

	d = buff[0] << 8 | buff[1];
	SPIx_DR = d;
	buff += 2;
	btx -= 2;
	do {					// Receive the data block into buffer
		d = buff[0] << 8 | buff[1];
		while (SPIx_SR & _BV(7)) ;
		SPIx_DR;
		SPIx_DR = d;
		buff += 2;
	} while (btx -= 2);
	while (SPIx_SR & _BV(7)) ;
	SPIx_DR;

	SPIx_CR1 &= ~(_BV(6) | _BV(11));	// Set SPI to 8-bit mode
	SPIx_CR1 |= _BV(6);*/
}

static
void deselect (void)
{
	//CS_HIGH();		/* Set CS# high */
	HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_SET);
	xchg_spi(0xFF);	/* Dummy clock (force DO hi-z for multiple slave SPI) */

}

DSTATUS disk_initialize (
	BYTE drv		/* Physical drive number (0) */
)
{
	BYTE n, cmd, ty, ocr[4];


	if (drv) return STA_NOINIT;			/* Supports only drive 0 */
	init_spi();							/* Initialize SPI */

	if (Stat & STA_NODISK) return Stat;	/* Is card existing in the soket? */

	FCLK_SLOW();
	for (n = 10; n; n--) xchg_spi(0xFF);	/* Send 80 dummy clocks */

	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Put the card SPI/Idle state */
		Timer1 = 1000;						/* Initialization timeout = 1 sec */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDv2? */
			for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);	/* Get 32 bit return value of R7 resp */
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* Is the card supports vcc of 2.7-3.6V? */
				while (Timer1 && send_cmd(ACMD41, 1UL << 30)) ;	/* Wait for end of initialization with ACMD41(HCS) */
				if (Timer1 && send_cmd(CMD58, 0) == 0) {		/* Check CCS bit in the OCR */
					for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);
					ty = (ocr[0] & 0x40) ? CT_SD2 | CT_BLOCK : CT_SD2;	/* Card id SDv2 */
				}
			}
		} else {	/* Not SDv2 card */
			if (send_cmd(ACMD41, 0) <= 1) 	{	/* SDv1 or MMC? */
				ty = CT_SD1; cmd = ACMD41;	/* SDv1 (ACMD41(0)) */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMCv3 (CMD1(0)) */
			}
			while (Timer1 && send_cmd(cmd, 0)) ;		/* Wait for end of initialization */
			if (!Timer1 || send_cmd(CMD16, 512) != 0)	/* Set block length: 512 */
				ty = 0;
		}
	}
	CardType = ty;	/* Card type */
	deselect();

	if (ty) {			/* OK */
		FCLK_FAST();			/* Set fast clock */
		Stat &= ~STA_NOINIT;	/* Clear STA_NOINIT flag */
	} else {			/* Failed */
		Stat = STA_NOINIT;
	}

	return Stat;
}
